# ai-integration

./: .gitignore  pyproject.toml
basics/1. working_with_llms/: connecting.py  parsers.py  prompts.py
basics/2. working_with_data/: 1. data_loading.py  2. splitters.py  3. embeddings.py  4. vectors-stores.py  5. retrievers.py  6. tok_k.py  7. rag_with_lcel.py
basics/3. chain/: 1. runnable-exec-order.py  2. chain-execution.py  3. runnables.py  4. combine_chains.py  5. lcel_chain_at_work.py
basics/4. memory/: 1. conversation_buffer_memory.py  2. conversation_buffer_window_memory.py  3. chat-memory.py
level_1_applications/2. key_data_extraction/: 1. key_data_extraction.py
level_1_applications/3. sentimental_analysis/: 1. sentimental_analysis.py
level_1_applications/4. ask_que/: over_db.py
level_1_applications/5. basic_retriever/: 1. basic_retriever.py
level_1_applications/6. simple_rag/: 1. simple_rag.py
level_1_applications/7. conversation_rag.py/: 1. conversational_retriever.py
level_1_applications/ask_que/: over_db.py  over_pdf.py
level_1_applications/chatbot/: 1. simple_chatbot.py  2. advanced_chatbot.py  messages.json
level_1_applications/key_data_extraction/: 1. key_data_extraction.py
