[project]
name = "self-learning"
version = "0.1.0"
description = ""
authors = [
    {name = "tiilon",email = "tiilon42@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "langchain (>=0.3.15,<0.4.0)",
    "langchain-community (>=0.3.15,<0.4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "langchain-ollama (>=0.2.2,<0.3.0)",
    "langchain-chroma (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
